feat: * Language file updated

--- a/src/scss/wcp-admin-style.scss
+++ b/src/scss/wcp-admin-style.scss
@@ -2,7 +2,7 @@ $headerColour: #504242;
 $lightTextColour: #737171;
 $fieldsetBorder: #462b2b3d;
 
-// General Form design
+// General Form Design
 .wcp-admin-panel-wrapper {
     padding: 16px;
     form {
