feat: info dashicon added before every help text.

--- a/src/scss/wcp-admin-style.scss
+++ b/src/scss/wcp-admin-style.scss
@@ -109,5 +109,10 @@ $lightBorder: #beb8b8;
 
     .help-block {
         color: $lightTextColour;
+        &::before{
+            content: "\f14c"; /** dashicons-info-outline **/
+            font-family: 'dashicons';
+            color: #9494e3;
+        }
     }
 }
