--- a/src/scss/admin/admin-dashboard-app-style.scss
+++ b/src/scss/admin/admin-dashboard-app-style.scss
@@ -80,6 +80,13 @@ fieldset {
     font-weight: 700;
     font-size: 1.1rem;
     color: #8d8686;
+    padding: 8px;
+    border-radius: 5px;
+    background-color: #ffffff;
+  }
+  input[type=text], input[type=checkbox], input[type=number] {
+    border: 1px solid #dedee0;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
   }
 }
 .wcp-row {
