feat: Product Selector section added

--- a/src/scss/admin/admin-dashboard-app-style.scss
+++ b/src/scss/admin/admin-dashboard-app-style.scss
@@ -75,6 +75,7 @@
 fieldset {
   background-color: #f9f9fd;
   padding: 16px 32px;
+  margin: 16px 0;
   border-radius: 5px;
   legend {
     font-weight: 700;
