feat: layout defined

--- a/src/scss/wcp-admin-style.scss
+++ b/src/scss/wcp-admin-style.scss
@@ -5,7 +5,6 @@ $lightBorder: #beb8b8;
 
 // General Form Design
 .wcp-admin-panel-wrapper {
-    padding: 16px;
     form {
         fieldset {
             border: 1px solid $lightBorder;
@@ -74,7 +73,6 @@ $lightBorder: #beb8b8;
         }
     }
     .main {
-        margin: 24px 0;
         padding: 24px 0;
         h4 {
             text-align: center;
@@ -116,3 +114,5 @@ $lightBorder: #beb8b8;
         }
     }
 }
+
+@import "new-design";
