--- a/src/scss/new-design.scss
+++ b/src/scss/new-design.scss
@@ -5,16 +5,20 @@ $text_color_light: #6d6565;
 // Background Colors
 $background_color_regular: #fff;
 $background_color_light: #f6f9f9;
+$background_color_medium: #e7f2f2;
 
 // Border Color
 $border_color_light: #e5eaea;
 
 // Color Swatches
-$swatch_primary: #42a5f5;
+$swatch_primary: #f25500;
 
 // Border Radius
 $border_radius_standard: 8px;
 $border_radius_light: 4px;
+
+$transformation_duration_fast: 0.2s;
+$transformation_duration_medium: 0.4s;
 
 
 .wcp-admin-panel-wrapper {
@@ -29,15 +33,72 @@ $border_radius_light: 4px;
     border-radius: $border-radius_standard 0 0 $border-radius_standard;
     background-color: $background_color_light;
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     .logo-wrapper {
       padding: 16px 0;
       display: flex;
       justify-content: center;
     }
+    .link-wrapper {
+      padding: 0 0 16px 32px;
+      a {
+        text-decoration: none;
+      }
+    }
   }
   .main {
-    padding: 0 16px;
+    padding: 16px;
     width: 600px;
+    .header {
+      .wcp-admin-main-menu-wrapper {
+        ul {
+          li {
+            margin: 4px;
+            padding: 8px;
+            border-radius: $border_radius_standard;
+            background-color: $background_color_light;
+            transition-duration: $transformation_duration_fast;
+            &:hover {
+              transition-duration: $transformation_duration_fast;
+              background-color: $background_color_medium;
+            }
+            &:first-child {
+              margin-left: 0;
+            }
+            a {
+              color: $swatch_primary;
+              &:focus {
+                box-shadow: unset;
+                color: $swatch_primary;
+              }
+            }
+            &.active {
+              background-color: $swatch_primary;
+              a {
+                color: #ffffff;
+              }
+            }
+          }
+        }
+      }
+    }
+    form {
+      fieldset {
+        border: 0.5px solid $border_color_light;
+        border-radius: $border_radius_light;
+        legend {
+          margin: 0 16px;
+          padding: 8px 16px;
+          border-right: $border_radius_light;
+          background-color: $background_color_light;
+        }
+        .wcp-uploaded-image-preview_wrapper {
+          img {
+            max-width: 300px;
+          }
+        }
+      }
+    }
   }
 }
