Input box border fixed.

--- a/src/scss/wcp-admin-style.scss
+++ b/src/scss/wcp-admin-style.scss
@@ -20,7 +20,7 @@ $lightBorder: #beb8b8;
             }
         }
         input[type=text] {
-            border: 0;
+            border: 1px solid #8c8f94;
             border-radius: 5px;
             width: 300px;
             color: #464242;
